# liboss

./: CMakeLists.txt  README.md  base64.c  base64.h  bucket.c  bucket.h  compiler-MSVC.cmake  error_code.h  http.c  http.h  logging.h  main.c  object.c  object.h  util.c  util.h  xml.c  xml.h
test/: CMakeLists.txt  ft_object.c  ftutil.c  ftutil.h
